k8s/common/argocd-apps/ingress-graphs-prometheus-linuxaid.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-linuxaid-graphs
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-cert-manager
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.priority: "1"
spec:
spec:
  rules:
  - host: graphs.obmondo.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              name: http
  tls:
  - hosts:
    - graphs.obmondo.com
    secretName: graphs-obmondo-com-tls
